2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added EscapeText() to utility.c to support escaping text.

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Text escaping for -draw and DrawAnnotation was not working properly.
    Now it does.  Backslash should act as a escape for the the active
    quote character (', ", or }) as well as backslash.  The backslash
    should be discarded if it was used as an escape character.  In order
    to reliably pass a backslash, two successive backslashes are required
    (e.g. "\\").

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified Base64Encode() of utility.c so that it returns the number of
    characters encoded. This avoids having to invoke strlen() on possibly
    megabytes of data.

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fixed compilation error with Sun Workshop compiler (wmf.c).

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Implement polypolygon support in WMF renderer.  Requires libwmf
    0.2.4 with draw_polypolygon IPA callback.

2002-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added --enable-ccmalloc configure option.

2002-05-09  Cristy  <cristy@mystic.es.dupont.com>
  * DCM patch provided by Shane Blackett.

2002-05-07  Cristy  <cristy@mystic.es.dupont.com>
  * Lock mutex when destorying a SemaphoreInfo structure (patch provided
    by William Radcliffe).
  * Added mingw patches provided by Derry Bryson.

2002-05-05  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5-1 released.

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * Subimage specification did not work for TIFF (e.g.
    convert 'image.tiff[1]' image.png).

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5 released.

2002-04-20  Cristy  <cristy@mystic.es.dupont.com>
  * Added magic string detection for the FPX format (patch provided by
    Marc).
